<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play</string>

    <string name="you_win">You Win</string>
    <string name="you_lose">You Lose</string>
    <string name="lose">Lose</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="you">You</string>
    <string name="computer">Computer</string>
    <string name="game_history">History</string>
    <string name="delete_all">Delete All</string>
    <string name="time">time</string>
    <string name="vs">VS</string>


</resources>