<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/draw"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="27dp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/time"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="69dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:layout_gravity="bottom|center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="141dp"
                android:layout_height="107dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivComputerResult"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/paper"
                    tools:layout_editor_absoluteX="242dp"
                    tools:layout_editor_absoluteY="115dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/computer"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="205dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vs"
                tools:layout_editor_absoluteX="193dp"
                tools:layout_editor_absoluteY="139dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivPlayerResult"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/paper"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="115dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/you"
                    tools:layout_editor_absoluteX="265dp"
                    tools:layout_editor_absoluteY="205dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>